--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <meta charset="utf-8">
     <title></title>
+    <style media="screen">
+      body{
+        background-color: #F2F4F3;
+      }
+      </style>
   </head>
   <body>
+    <h1>Why effective</h1>
+    <p>We chose to use the heat map and correlation factor to represent the similarity between penguins' grade. The higher correlation will be shown in darker blue on the heat map. We use dark blue to indicate the correlation that is higher than 0.6 which indicates there is a relatively high chance that those two penguins are cheating since their pattern of overall grade are very similar. The diagonal on the heat map has a correlation of 1 since each penguin is identical to itself. By looking into how dark the blue is on the heat map, the user can easily tell the similarity between penguins and conclude that they are cheating or not.</p>
   </body>
   <script type="text/javascript" src="code.js">
   </script>
